--- a/src/global.css
+++ b/src/global.css
@@ -1,2 +1,36 @@
 @import 'tailwindcss';
 @import 'uniwind';
+
+@layer theme {
+  :root {
+    @variant light {
+      --color-background: var(--color-white);
+      --color-foreground: var(--color-neutral-950);
+      --color-card: var(--color-white);
+      --color-card-foreground: var(--color-neutral-950);
+      --color-primary: var(--color-neutral-900);
+      --color-primary-foreground: var(--color-neutral-50);
+      --color-secondary: var(--color-neutral-100);
+      --color-secondary-foreground: var(--color-neutral-900);
+      --color-muted: var(--color-neutral-100);
+      --color-muted-foreground: var(--color-neutral-500);
+      --color-destructive: var(--color-red-600);
+      --color-border: var(--color-neutral-400);
+    }
+
+    @variant dark {
+      --color-background: var(--color-neutral-950);
+      --color-foreground: var(--color-neutral-50);
+      --color-card: var(--color-neutral-900);
+      --color-card-foreground: var(--color-neutral-50);
+      --color-primary: var(--color-neutral-200);
+      --color-primary-foreground: var(--color-neutral-900);
+      --color-secondary: var(--color-neutral-800);
+      --color-secondary-foreground: var(--color-neutral-50);
+      --color-muted: var(--color-neutral-800);
+      --color-muted-foreground: var(--color-zinc-400);
+      --color-destructive: var(--color-red-400);
+      --color-border: var(--color-neutral-700);
+    }
+  }
+}
